# synapse-password-reset

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
public/: index.html  index.tpl
scripts/: Dockerfile.build  Dockerfile.release  build-push-docker-image  setup_test_env.sh
scripts/test_synapse_config/: entrypoint.sh  homeserver.yaml  logconfig.yaml
src/: main.rs
tests/: integration_test.rs
