[package]
name = "synapse-password-reset"
version = "0.1.0"
authors = ["Euan Kemp <euank@euank.com>"]
edition = "2021"

[dependencies]
nickel = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "*"
bcrypt = ">= 0.1.3"
postgres = "*"
log = "*"
env_logger = "*"


[dev-dependencies]
hyper = "*"
url = "*"
rand = "*"

[features]
default = []
integ-tests = []
